--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "arqanmode"
-version = "0.0.6"
+version = "0.0.10"
 description = "rebuild with poetry"
 authors = ["Timur Yakhshigulov <t.iakhshigulov@innopolis.university>"]
 readme = "README.md"
@@ -13,6 +13,7 @@ loguru = ">=0.5.3"
 aiokafka = ">=0.10.0"
 requests = ">=2.31.0"
 redis = "^5.0.4"
+pytest = "^8.2.0"
 
 
 [build-system]
