--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "arqanmode"
-version = "0.0.10"
+version = "0.0.12rc7"
 description = "rebuild with poetry"
 authors = ["Timur Yakhshigulov <t.iakhshigulov@innopolis.university>"]
 readme = "README.md"
